Improve 'About Me' section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <section id="about">
                 <h1>About Me</h1>
                 <p>
-                    Besides coding I have a very broad range of interests. I love learning about Mathematics and Physics, reading and playing video games. My love for programming began early in my teenage years and have only grown since. But just having programming as a hobby was not enough, so I decided to start a career as a developer.
+                    I started my lifelong interest in coding and problem-solving in my teenage years, and, after a few years of tutoring, I decided to become a professional developer. In my spare time, I enjoy watching Netflix series, reading or listening to books, playing chess and furthering my knowledge of Mathematics and Physics.
                 </p>
             </section>
             <section id="stack">
