Fix aligning of text in 'About Me' section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </section>
             <section id="about">
                 <h1>About Me</h1>
-                <p>
+                <p class="section-text">
                     I started my lifelong interest in coding and problem-solving in my teenage years, and, after a few years of tutoring, I decided to become a professional developer. In my spare time, I enjoy watching Netflix series, reading or listening to books, playing chess and furthering my knowledge of Mathematics and Physics.
                 </p>
             </section>
