--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
                 <p class="section-text">
                     I started my lifelong interest in coding and problem-solving in my teenage years, and, after a few years of tutoring, I decided to become a professional developer. In my spare time, I enjoy watching Netflix series, reading or listening to books, playing chess and furthering my knowledge of Mathematics and Physics.
                 </p>
+                <div class="time-line">
+                    <div class="time-line-item">
+                        <img src="public/img/tutoring.jpg" alt="Tutor image" width="200">
+                        <p class="time">2013-2020</p>
+                        <p class="title">Mathematics and Physics Tutor</p>
+                    </div>
+                    <div class="time-line-item"></div>
+                    <div class="time-line-item"></div>
+                </div>
             </section>
             <section id="stack">
                 <h1>My Stack</h1>
