--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         />
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="public/css/style.css" />
+        <link rel="shortcut icon" href="public/img/favicon.ico" type="image/x-icon">
     </head>
     <body>
         <header>
