Add webmanifest and other types of favicons

--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Guilherme Dias Simoes | Software Developer</title>
+        <meta name="author" content="Guilherme Dias Simões">
         <meta
             name="description"
             content="My name is Guilherme Dias Simões and I am a software developer with focus on web development"
         />
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="public/css/style.css" />
-        <link rel="shortcut icon" href="public/img/favicon.ico" type="image/x-icon">
+
+        <link rel="apple-touch-icon" sizes="180x180" href="public/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="public/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="public/favicon/favicon-16x16.png">
+        <link rel="manifest" href="site.webmanifest">
+
+        <script defer src="public/js/main.js"></script>
     </head>
     <body>
         <header>
@@ -87,6 +94,5 @@
         </footer>
 
         <button>Change user</button>
-        <script src="public/js/main.js"></script>
     </body>
 </html>
