--- a/index.html
+++ b/index.html
@@ -32,18 +32,16 @@
 
         <main>
             <section id="hero">
-                <figure>
-                    <img src="public/img/IMG_7682.JPG" alt="My photograph." />
-                </figure>
+                <img src="public/img/IMG_7682.JPG" alt="My photograph." title="This is the oldest operating bookstore in the world!"/>
             </section>
             <section id="about">
-                <h1>About Me</h1>
+                <h2>About Me</h2>
                 <p class="section-text">
                     I started my lifelong interest in coding and problem-solving in my teenage years, and, after a few years of tutoring, I decided to become a professional developer. In my spare time, I enjoy watching Netflix series, reading or listening to books, playing chess and furthering my knowledge of Mathematics and Physics.
                 </p>
                 <div class="time-line">
                     <div class="time-line-item">
-                        <img src="public/img/tutoring.jpg" alt="Tutor image" width="200">
+                        <img src="public/img/tutoring.jpg" alt="Tutoring image" width="200">
                         <p class="time">2013-2020</p>
                         <p class="title">Mathematics and Physics Tutor</p>
                     </div>
@@ -52,12 +50,12 @@
                 </div>
             </section>
             <section id="stack">
-                <h1>My Stack</h1>
+                <h2>My Stack</h2>
             </section>
             <section id="portfolio">
-                <h1>Projects</h1>
+                <h2>Projects</h2>
                 <article>
-                    <h2>My website</h2>
+                    <h3>My website</h3>
                     <p>
                         Lorem, ipsum dolor sit amet consectetur adipisicing
                         elit. Ipsam doloribus id odio tenetur quis reprehenderit
@@ -83,7 +81,7 @@
                 </article>
             </section>
             <section id="contact">
-                <h1>Contact</h1>
+                <h2>Contact</h2>
             </section>
         </main>
 
