More intuitive box-sizing

--- a/index.html
+++ b/index.html
@@ -4,18 +4,35 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Guilherme Dias Simoes | Software Developer</title>
-        <meta name="author" content="Guilherme Dias Simões">
+        <meta name="author" content="Guilherme Dias Simões" />
         <meta
             name="description"
             content="My name is Guilherme Dias Simões and I am a software developer with focus on web development"
         />
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"> 
+        <link
+            href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
+            rel="stylesheet"
+        />
         <link rel="stylesheet" href="public/css/style.css" />
 
-        <link rel="apple-touch-icon" sizes="180x180" href="public/favicon/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="public/favicon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="public/favicon/favicon-16x16.png">
-        <link rel="manifest" href="site.webmanifest">
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="public/favicon/apple-touch-icon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="public/favicon/favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="public/favicon/favicon-16x16.png"
+        />
+        <link rel="manifest" href="site.webmanifest" />
 
         <script defer src="public/js/main.js"></script>
     </head>
@@ -32,16 +49,29 @@
 
         <main>
             <section id="hero">
-                <img src="public/img/IMG_7682.JPG" alt="My photograph." title="This is the oldest operating bookstore in the world!"/>
+                <img
+                    src="https://github.com/gdsimoes.png"
+                    alt="My photograph."
+                    title="This is the oldest operating bookstore in the world!"
+                />
             </section>
             <section id="about">
                 <h2>About Me</h2>
                 <p class="section-text">
-                    I started my lifelong interest in coding and problem-solving in my teenage years, and, after a few years of tutoring, I decided to become a professional developer. In my spare time, I enjoy watching Netflix series, reading or listening to books, playing chess and furthering my knowledge of Mathematics and Physics.
+                    I started my lifelong interest in coding and problem-solving
+                    in my teenage years, and, after a few years of tutoring, I
+                    decided to become a professional developer. In my spare
+                    time, I enjoy watching Netflix series, reading or listening
+                    to books, playing chess and furthering my knowledge of
+                    Mathematics and Physics.
                 </p>
                 <div class="time-line">
                     <div class="time-line-item">
-                        <img src="public/img/tutoring.jpg" alt="Tutoring image" width="200">
+                        <img
+                            src="public/img/tutoring.jpg"
+                            alt="Tutoring image"
+                            width="200"
+                        />
                         <p class="time">2013-2020</p>
                         <p class="title">Mathematics and Physics Tutor</p>
                     </div>
