Remove stack section

--- a/index.html
+++ b/index.html
@@ -38,10 +38,9 @@
     </head>
     <body>
         <header>
-            <a href="/">gdsimoes</a>
+            <a href="#">gdsimoes</a>
             <nav>
                 <a href="#about">About me</a>
-                <a href="#stack">Stack</a>
                 <a href="#portfolio">Portfolio</a>
                 <a href="#contact">Contact</a>
             </nav>
@@ -72,15 +71,12 @@
                             alt="Tutoring image"
                             width="200"
                         />
-                        <p class="time">2013-2020</p>
+                        <p class="time">2013-2021</p>
                         <p class="title">Mathematics and Physics Tutor</p>
                     </div>
                     <div class="time-line-item"></div>
                     <div class="time-line-item"></div>
                 </div>
-            </section>
-            <section id="stack">
-                <h2>My Stack</h2>
             </section>
             <section id="portfolio">
                 <h2>Projects</h2>
@@ -118,7 +114,7 @@
         <footer>
             <p>Let's stay connected</p>
             <nav>Social media</nav>
-            <p>2020 | Made by Guilherme Dias Simões</p>
+            <p>2021 | Made by Guilherme Dias Simões</p>
         </footer>
 
         <button>Change user</button>
