--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
             rel="stylesheet"
         />
+        <link rel="stylesheet" href="public/css/normalize.css" />
         <link rel="stylesheet" href="public/css/style.css" />
 
         <link
