Finish the hero section

--- a/index.html
+++ b/index.html
@@ -51,8 +51,12 @@
                 <img
                     src="https://github.com/gdsimoes.png"
                     alt="My photograph."
-                    title="This is the oldest operating bookstore in the world!"
+                    title="This is me in the oldest operating bookstore in the world!"
                 />
+                <div id="title">
+                    <h1>Guilherme Dias Simoes</h1>
+                    <p>Web Developer</p>
+                </div>
             </section>
             <section id="about">
                 <h2>About Me</h2>
