Add Seneca timeline item

--- a/index.html
+++ b/index.html
@@ -73,10 +73,19 @@
                         <img
                             src="public/img/tutoring.jpg"
                             alt="Tutoring image"
-                            width="200"
                         />
                         <p class="time">2013-2021</p>
                         <p class="title">Mathematics and Physics Tutor</p>
+                    </div>
+                    <div class="time-line-item">
+                        <img
+                            id="seneca-logo"
+                            src="public/img/seneca.png"
+                            alt="Seneca Logo"
+                            width="200"
+                        />
+                        <p class="time">2018-2020</p>
+                        <p class="title">Computer Programming Graduate</p>
                     </div>
                     <div class="time-line-item"></div>
                     <div class="time-line-item"></div>
@@ -120,7 +129,5 @@
             <nav>Social media</nav>
             <p>2021 | Made by Guilherme Dias Simões</p>
         </footer>
-
-        <button>Change user</button>
     </body>
 </html>
