Add CSS Remedy and my-website project

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="public/css/normalize.css" />
+        <link rel="stylesheet" href="public/css/remedy.css" />
         <link rel="stylesheet" href="public/css/style.css" />
 
         <link
@@ -68,55 +68,37 @@
                     to books, playing chess and furthering my knowledge of
                     Mathematics and Physics.
                 </p>
-                <div class="time-line">
-                    <div class="time-line-item">
+                <div class="timeline">
+                    <div class="timeline-item">
                         <img
                             src="public/img/tutoring.jpg"
                             alt="Tutoring image"
                         />
-                        <p class="time">2013-2021</p>
-                        <p class="title">Mathematics and Physics Tutor</p>
+                        <h3 class="timeline-time">2013-2021</h3>
+                        <h3 class="timeline-title">Mathematics and Physics Tutor</h3>
                     </div>
-                    <div class="time-line-item">
+                    <div class="timeline-item">
                         <img
                             id="seneca-logo"
                             src="public/img/seneca.png"
                             alt="Seneca Logo"
                             width="200"
                         />
-                        <p class="time">2018-2020</p>
-                        <p class="title">Computer Programming Graduate</p>
+                        <h3 class="timeline-time">2018-2020</h3>
+                        <h3 class="timeline-title">Computer Programming Graduate</h3>
                     </div>
-                    <div class="time-line-item"></div>
-                    <div class="time-line-item"></div>
+                    <div class="timeline-item"></div>
+                    <div class="timeline-item"></div>
                 </div>
             </section>
             <section id="portfolio">
                 <h2>Projects</h2>
-                <article>
-                    <h3>My website</h3>
-                    <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing
-                        elit. Ipsam doloribus id odio tenetur quis reprehenderit
-                        quaerat error nisi ullam nam esse magni laudantium
-                        sapiente impedit quas facere, doloremque quod nobis!
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing
-                        elit. Esse ab, fuga culpa animi ut et consequuntur
-                        facilis. Atque neque veritatis distinctio, amet cumque a
-                        facere quasi ducimus quam nam recusandae id quisquam.
-                        Nobis ipsum, atque quod aperiam iure quo rerum
-                        voluptatem, modi reiciendis accusantium sunt est.
-                        Deleniti aut soluta est alias quisquam ut reiciendis
-                        unde fugiat in quam rerum esse magni, modi libero rem
-                        ipsa explicabo veritatis. Et ipsa mollitia animi harum
-                        eius ut, libero ipsam culpa dolorem deleniti modi
-                        delectus voluptate officia dicta inventore ea, facilis
-                        veniam optio doloremque, odio consectetur eligendi
-                        nostrum earum. Pariatur corrupti atque blanditiis
-                        voluptates?
-                    </p>
+                <article class="project">
+                    <a href="https://github.com/gdsimoes/gdsimoes.github.io"><img src="public/img/my-website.jpg" alt="My Website"></a>
+                    <div class="project-title">
+                        <h3>My Website</h3>
+                    </div>
+                </article>
                 </article>
             </section>
             <section id="contact">
