Add social media icons

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <link rel="stylesheet" href="public/css/remedy.css" />
         <link rel="stylesheet" href="public/css/style.css" />
 
+        <!-- This is necessary for social media icons -->
+        <script src="https://kit.fontawesome.com/33addf3cbe.js" crossorigin="anonymous"></script>
+
         <link
             rel="apple-touch-icon"
             sizes="180x180"
@@ -107,8 +110,9 @@
         </main>
 
         <footer>
-            <p>Let's stay connected</p>
-            <nav>Social media</nav>
+            <i class="fab fa-linkedin"></i>
+            <i class="fab fa-github-square"></i>
+            <i class="fas fa-envelope-square"></i>
             <p>2021 | Made by Guilherme Dias Simões</p>
         </footer>
     </body>
