Change size of projects and add comments

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <i class="fab fa-linkedin"></i>
             <i class="fab fa-github-square"></i>
             <i class="fas fa-envelope-square"></i>
-            <p>2021 | Made by Guilherme Dias Simões</p>
+            <p>2021 | Made by Guilherme Dias Simoes</p>
         </footer>
     </body>
 </html>
