--- a/index.html
+++ b/index.html
@@ -82,6 +82,15 @@
                     </div>
                     <div class="timeline-item">
                         <img
+                            src="public/img/programming.jpg"
+                            alt="Programming image"
+                            width="200"
+                        />
+                        <h3 class="timeline-time">2013-2021</h3>
+                        <h3 class="timeline-title">Hobbyist Programmer</h3>
+                    </div>
+                    <div class="timeline-item">
+                        <img
                             id="seneca-logo"
                             src="public/img/seneca.png"
                             alt="Seneca Logo"
@@ -90,8 +99,6 @@
                         <h3 class="timeline-time">2018-2020</h3>
                         <h3 class="timeline-title">Computer Programming Graduate</h3>
                     </div>
-                    <div class="timeline-item"></div>
-                    <div class="timeline-item"></div>
                 </div>
             </section>
             <section id="portfolio">
