Remove unnecessary script

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         />
         <link rel="manifest" href="site.webmanifest" />
 
-        <script defer src="public/js/main.js"></script>
+        <!-- <script defer src="public/js/main.js"></script> -->
     </head>
     <body>
         <header>
