Add 'breath' and 'Project Euler' projects

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         <link rel="stylesheet" href="public/css/style.css" />
 
         <!-- This is necessary for social media icons -->
-        <script src="https://kit.fontawesome.com/33addf3cbe.js" crossorigin="anonymous"></script>
+        <script
+            src="https://kit.fontawesome.com/33addf3cbe.js"
+            crossorigin="anonymous"
+        ></script>
 
         <link
             rel="apple-touch-icon"
@@ -78,7 +81,9 @@
                             alt="Tutoring image"
                         />
                         <h3 class="timeline-time">2013-2021</h3>
-                        <h3 class="timeline-title">Mathematics and Physics Tutor</h3>
+                        <h3 class="timeline-title">
+                            Mathematics and Physics Tutor
+                        </h3>
                     </div>
                     <div class="timeline-item">
                         <img
@@ -97,18 +102,41 @@
                             width="200"
                         />
                         <h3 class="timeline-time">2018-2020</h3>
-                        <h3 class="timeline-title">Computer Programming Graduate</h3>
+                        <h3 class="timeline-title">
+                            Computer Programming Graduate
+                        </h3>
                     </div>
                 </div>
             </section>
             <section id="portfolio">
                 <h2>Projects</h2>
                 <article class="project">
-                    <a href="https://github.com/gdsimoes/gdsimoes.github.io"><img src="public/img/my-website.jpg" alt="My Website"></a>
+                    <a href="https://github.com/gdsimoes/gdsimoes.github.io"
+                        ><img src="public/img/my-website.jpg" alt="My Website"
+                    /></a>
                     <div class="project-title">
                         <h3>My Website</h3>
                     </div>
                 </article>
+                <article class="project">
+                    <a href="https://github.com/gdsimoes/breath"
+                        ><img
+                            src="public/img/breath.png"
+                            alt="Breathing Exercise"
+                    /></a>
+                    <div class="project-title">
+                        <h3>Breathing Exercise</h3>
+                    </div>
+                </article>
+                <article class="project">
+                    <a href="https://github.com/gdsimoes/ProjectEuler"
+                        ><img
+                            src="public/img/ProjectEuler.png"
+                            alt="Project Euler"
+                    /></a>
+                    <div class="project-title">
+                        <h3>Project Euler</h3>
+                    </div>
                 </article>
             </section>
             <section id="contact">
@@ -118,9 +146,15 @@
 
         <footer>
             <div class="contact-icons">
-                <a href="https://github.com/gdsimoes"><i class="fab fa-github-square"></i></a>
-                <a href="https://www.linkedin.com/in/gdsimoes/"><i class="fab fa-linkedin"></i></a>
-                <a href="mailto:portfolio.gds@gmail.com"><i class="fas fa-envelope-square"></i></a>
+                <a href="https://github.com/gdsimoes"
+                    ><i class="fab fa-github-square"></i
+                ></a>
+                <a href="https://www.linkedin.com/in/gdsimoes/"
+                    ><i class="fab fa-linkedin"></i
+                ></a>
+                <a href="mailto:portfolio.gds@gmail.com"
+                    ><i class="fas fa-envelope-square"></i
+                ></a>
             </div>
             <p>2021 | Made by Guilherme Dias Simoes</p>
         </footer>
