--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <header>
             <nav>
                 <a href="#about">About me</a>
-                <a href="#portfolio">Portfolio</a>
+                <a href="#projects">Projects</a>
                 <a href="#contact">Contact</a>
             </nav>
         </header>
@@ -64,7 +64,7 @@
                     <p>Web Developer</p>
                 </div>
             </section>
-            <section id="about">
+            <section id="about" class="anchor">
                 <h2>About Me</h2>
                 <p class="section-text">
                     I started my lifelong interest in coding and problem-solving
@@ -108,7 +108,7 @@
                     </div>
                 </div>
             </section>
-            <section id="portfolio">
+            <section id="projects">
                 <h2>Projects</h2>
                 <article class="project">
                     <a href="https://github.com/gdsimoes/gdsimoes.github.io"
@@ -148,7 +148,7 @@
                     <a href="https://www.linkedin.com/in/gdsimoes/"
                         ><i class="fab fa-linkedin"></i
                     ></a>
-                    <a href="mailto:portfolio.gds@gmail.com"
+                    <a href="mailto:Projects.gds@gmail.com"
                         ><i class="fas fa-envelope-square"></i
                     ></a>
                 </div>
