Finish the projects section

--- a/index.html
+++ b/index.html
@@ -108,38 +108,42 @@
                     </div>
                 </div>
             </section>
-            <section id="projects">
+            <section id="projects" class="anchor">
                 <h2>Projects</h2>
-                <article class="project">
-                    <a href="https://github.com/gdsimoes/gdsimoes.github.io"
-                        ><img src="public/img/my-website.jpg" alt="My Website"
-                    /></a>
-                    <div class="project-title">
-                        <h3>My Website</h3>
-                    </div>
-                </article>
-                <article class="project">
-                    <a href="https://github.com/gdsimoes/breath"
-                        ><img
-                            src="public/img/breath.png"
-                            alt="Breathing Exercise"
-                    /></a>
-                    <div class="project-title">
-                        <h3>Breathing Exercise</h3>
-                    </div>
-                </article>
-                <article class="project">
-                    <a href="https://github.com/gdsimoes/ProjectEuler"
-                        ><img
-                            src="public/img/ProjectEuler.png"
-                            alt="Project Euler"
-                    /></a>
-                    <div class="project-title">
-                        <h3>Project Euler</h3>
-                    </div>
-                </article>
+                <div class="project-container">
+                    <article class="project">
+                        <a href="https://github.com/gdsimoes/gdsimoes.github.io"
+                            ><img
+                                src="public/img/my-website.jpg"
+                                alt="My Website"
+                        /></a>
+                        <div class="project-title">
+                            <h3>My Website</h3>
+                        </div>
+                    </article>
+                    <article class="project">
+                        <a href="https://github.com/gdsimoes/breath"
+                            ><img
+                                src="public/img/breath.png"
+                                alt="Breathing Exercise"
+                        /></a>
+                        <div class="project-title">
+                            <h3>Breathing Exercise</h3>
+                        </div>
+                    </article>
+                    <article class="project">
+                        <a href="https://github.com/gdsimoes/ProjectEuler"
+                            ><img
+                                src="public/img/ProjectEuler.png"
+                                alt="Project Euler"
+                        /></a>
+                        <div class="project-title">
+                            <h3>Project Euler</h3>
+                        </div>
+                    </article>
+                </div>
             </section>
-            <section id="contact">
+            <section id="contact" class="anchor">
                 <h2>Contact</h2>
                 <div class="contact-icons">
                     <a href="https://github.com/gdsimoes"
