--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <a href="https://www.linkedin.com/in/gdsimoes/"
                         ><i class="fab fa-linkedin"></i
                     ></a>
-                    <a href="mailto:Projects.gds@gmail.com"
+                    <a href="mailto:portfolio.gds@gmail.com"
                         ><i class="fas fa-envelope-square"></i
                     ></a>
                 </div>
