Add some comments in the head element

--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
             name="description"
             content="My name is Guilherme Dias Simões and I am a software developer with focus on web development"
         />
+
+        <!-- Necessary for Open Sans font -->
         <link
             href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
             rel="stylesheet"
         />
+
+        <!-- CSS Remedy: https://github.com/jensimmons/cssremedy -->
         <link rel="stylesheet" href="public/css/remedy.css" />
         <link rel="stylesheet" href="public/css/style.css" />
 
@@ -22,6 +26,7 @@
             crossorigin="anonymous"
         ></script>
 
+        <!-- favicons -->
         <link
             rel="apple-touch-icon"
             sizes="180x180"
