--- a/index.html
+++ b/index.html
@@ -79,26 +79,30 @@
                     to books, playing chess and furthering my knowledge of
                     Mathematics and Physics.
                 </p>
-                <div class="timeline">
-                    <div class="timeline-item">
+                <article class="timeline">
+                    <figure class="timeline-item">
                         <img
                             src="public/img/programming.jpg"
                             alt="Programming image"
                         />
-                        <h3 class="timeline-time">2013-2021</h3>
-                        <h3 class="timeline-title">Hobbyist Programmer</h3>
-                    </div>
-                    <div class="timeline-item">
+                        <figcaption>
+                            <h3 class="timeline-time">2013 - 2021</h3>
+                            <h3 class="timeline-title">Hobbyist Programmer</h3>
+                        </figcaption>
+                    </figure>
+                    <figure class="timeline-item">
                         <img
                             src="public/img/tutoring.jpg"
                             alt="Tutoring image"
                         />
-                        <h3 class="timeline-time">2013-2021</h3>
-                        <h3 class="timeline-title">
-                            Mathematics and Physics Tutor
-                        </h3>
-                    </div>
-                    <div class="timeline-item">
+                        <figcaption>
+                            <h3 class="timeline-time">2013-2021</h3>
+                            <h3 class="timeline-title">
+                                Mathematics and Physics Tutor
+                            </h3>
+                        </figcaption>
+                    </figure>
+                    <figure class="timeline-item">
                         <img
                             id="seneca-logo"
                             src="public/img/seneca.png"
@@ -108,47 +112,41 @@
                         <h3 class="timeline-title">
                             Computer Programming Graduate
                         </h3>
-                    </div>
-                </div>
+                    </figure>
+                </article>
             </section>
             <section id="projects" class="anchor">
                 <h2>Projects</h2>
-                <div class="project-container">
-                    <article class="project">
+                <article class="project-container">
+                    <figure class="project">
                         <a href="https://github.com/gdsimoes/gdsimoes.github.io"
                             ><img
                                 src="public/img/my-website.jpg"
                                 alt="My Website"
                         /></a>
-                        <div class="project-title">
-                            <h3>My Website</h3>
-                        </div>
-                    </article>
-                    <article class="project">
+                        <figcaption>My Website</figcaption>
+                    </figure>
+                    <figure class="project">
                         <a href="https://github.com/gdsimoes/breath"
                             ><img
                                 src="public/img/breath.png"
                                 alt="Breathing Exercise"
                         /></a>
-                        <div class="project-title">
-                            <h3>Breathing Exercise</h3>
-                        </div>
-                    </article>
-                    <article class="project">
+                        <figcaption>Breathing Exercise</figcaption>
+                    </figure>
+                    <figure class="project">
                         <a href="https://github.com/gdsimoes/ProjectEuler"
                             ><img
                                 src="public/img/ProjectEuler.png"
                                 alt="Project Euler"
                         /></a>
-                        <div class="project-title">
-                            <h3>Project Euler</h3>
-                        </div>
-                    </article>
-                </div>
+                        <figcaption>Project Euler</figcaption>
+                    </figure>
+                </article>
             </section>
             <section id="contact" class="anchor">
                 <h2>Contact</h2>
-                <div class="contact-icons">
+                <article class="contact-icons">
                     <a href="https://github.com/gdsimoes"
                         ><i class="fab fa-github-square"></i
                     ></a>
@@ -158,7 +156,7 @@
                     <a href="mailto:portfolio.gds@gmail.com"
                         ><i class="fas fa-envelope-square"></i
                     ></a>
-                </div>
+                </article>
             </section>
         </main>
 
