--- a/index.html
+++ b/index.html
@@ -142,6 +142,20 @@
                         /></a>
                         <figcaption>Project Euler</figcaption>
                     </figure>
+                    <figure class="project">
+                        <a href="https://github.com/gdsimoes/fullstackopen"
+                            ><img
+                                src="public/img/fullstackopen.png"
+                                alt="Full Stack open 2021"
+                        /></a>
+                        <figcaption>Full Stack open 2021</figcaption>
+                    </figure>
+                    <figure class="project">
+                        <a href="https://github.com/gdsimoes/gdshop"
+                            ><img src="public/img/gdshop.png" alt="GDShop"
+                        /></a>
+                        <figcaption>GDShop</figcaption>
+                    </figure>
                 </article>
             </section>
             <section id="contact" class="anchor">
